// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a queue 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_queue": Object {
        "attrs": Object {
          "handle": "sim-0",
        },
        "path": "root/my_queue",
        "props": Object {
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    },
    "path": "root",
    "type": "constructs.Construct",
  },
  "sdkVersion": "0.0.0",
  "startOrder": Array [
    "root/my_queue",
  ],
}
`;

exports[`messages are requeued if the function fails 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_queue": Object {
        "attrs": Object {
          "handle": "sim-1",
        },
        "children": Object {
          "OnMessage-236ff3d72ad0ae46": Object {
            "attrs": Object {
              "handle": "sim-0",
            },
            "inbound": Array [
              "root/my_queue",
            ],
            "path": "root/my_queue/OnMessage-236ff3d72ad0ae46",
            "props": Object {
              "environmentVariables": Object {
                "WING_SIM_INFLIGHT_RESOURCE_PATH": "root/my_queue/OnMessage-236ff3d72ad0ae46",
                "WING_SIM_INFLIGHT_RESOURCE_TYPE": "wingsdk.cloud.Function",
              },
              "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
              "sourceCodeLanguage": "javascript",
            },
            "type": "wingsdk.cloud.Function",
          },
        },
        "dependsOn": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "outbound": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "path": "root/my_queue",
        "props": Object {
          "subscribers": Array [
            Object {
              "batchSize": 1,
              "functionHandle": "\${root/my_queue/OnMessage-236ff3d72ad0ae46#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    },
    "path": "root",
    "type": "constructs.Construct",
  },
  "sdkVersion": "0.0.0",
  "startOrder": Array [
    "root/my_queue/OnMessage-236ff3d72ad0ae46",
    "root/my_queue",
  ],
}
`;

exports[`queue with one subscriber, batch size of 5 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_queue": Object {
        "attrs": Object {
          "handle": "sim-1",
        },
        "children": Object {
          "OnMessage-236ff3d72ad0ae46": Object {
            "attrs": Object {
              "handle": "sim-0",
            },
            "inbound": Array [
              "root/my_queue",
            ],
            "path": "root/my_queue/OnMessage-236ff3d72ad0ae46",
            "props": Object {
              "environmentVariables": Object {
                "WING_SIM_INFLIGHT_RESOURCE_PATH": "root/my_queue/OnMessage-236ff3d72ad0ae46",
                "WING_SIM_INFLIGHT_RESOURCE_TYPE": "wingsdk.cloud.Function",
              },
              "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
              "sourceCodeLanguage": "javascript",
            },
            "type": "wingsdk.cloud.Function",
          },
        },
        "dependsOn": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "outbound": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "path": "root/my_queue",
        "props": Object {
          "initialMessages": Array [
            "A",
            "B",
            "C",
            "D",
            "E",
            "F",
          ],
          "subscribers": Array [
            Object {
              "batchSize": 5,
              "functionHandle": "\${root/my_queue/OnMessage-236ff3d72ad0ae46#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    },
    "path": "root",
    "type": "constructs.Construct",
  },
  "sdkVersion": "0.0.0",
  "startOrder": Array [
    "root/my_queue/OnMessage-236ff3d72ad0ae46",
    "root/my_queue",
  ],
}
`;

exports[`queue with one subscriber, default batch size of 1 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_queue": Object {
        "attrs": Object {
          "handle": "sim-1",
        },
        "children": Object {
          "OnMessage-236ff3d72ad0ae46": Object {
            "attrs": Object {
              "handle": "sim-0",
            },
            "inbound": Array [
              "root/my_queue",
            ],
            "path": "root/my_queue/OnMessage-236ff3d72ad0ae46",
            "props": Object {
              "environmentVariables": Object {
                "WING_SIM_INFLIGHT_RESOURCE_PATH": "root/my_queue/OnMessage-236ff3d72ad0ae46",
                "WING_SIM_INFLIGHT_RESOURCE_TYPE": "wingsdk.cloud.Function",
              },
              "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
              "sourceCodeLanguage": "javascript",
            },
            "type": "wingsdk.cloud.Function",
          },
        },
        "dependsOn": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "outbound": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "path": "root/my_queue",
        "props": Object {
          "subscribers": Array [
            Object {
              "batchSize": 1,
              "functionHandle": "\${root/my_queue/OnMessage-236ff3d72ad0ae46#attrs.handle}",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    },
    "path": "root",
    "type": "constructs.Construct",
  },
  "sdkVersion": "0.0.0",
  "startOrder": Array [
    "root/my_queue/OnMessage-236ff3d72ad0ae46",
    "root/my_queue",
  ],
}
`;
